manifests/elasticsearch/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
  labels:
    component: kibana
spec:
  selector:
    component: kibana
  ports:
  - name: web
    port: 80
    targetPort: 5601
    protocol: TCP
